Fix some minor list spacing issues

--- a/src/cf-core/src/cf-base.less
+++ b/src/cf-core/src/cf-base.less
@@ -384,12 +384,12 @@ p + ol {
     margin-top: unit(-5px / @base-font-size-px, em);
 }
 
-:not(nav) li {
+li {
     margin-bottom: unit(8px / @base-font-size-px, em);
 }
 
-// Override for IE8 and under, which doesn't suppor the :not selector.
-.lt-ie9 nav li {
+li:last-child,
+nav li {
     margin-bottom: 0;
 }
 
